13/12/2006: Version 0.9.7 Released


07/11/2006:
	- Fixed the standalone mode, which is now activated by launching with
	  --standalone with an argument giving the socket port or path. For example,
	  localhost:8000 or /tmp/iipsrv.sock.


31/10/2006:
	- Added hillshading Task class and function for simulated raking light
	  visualization using 3D surface normal data. This is used via the SHD
	  command in association with CVT, which takes 2 arguments: the horizontal
	  light source angle in degrees and the vertical angle from the horizontal
	  plane.


26/09/2006:
	- Cleaned up the hash_map and pool_allocator stuff a little to use typedefs
	  instead of #ifdefs.
	- Added the legacy JTLS command class for panoramic views.


22/09/2006:
	- Added an FCGI stand-alone mode usable with lighttpd's spawn-fcgi command.
	- Also changed the IIPImage cache to use a hash_map and pool_alloc memory.


19/09/2006:
	- If we are using appropriate versions of g++, we now use the high
	  performance pool_alloc memory allocators for our cache containers.
	  Also, instead of a std::map, we use the hash_map extension which
	  offers better performance. Otherwise we default to std::map.
	- Fixed problem in TileManager where uncompressed tiles in the cache
	  were not being cropped when converted to JPEG. The IIPImage tile_width
	  and tile_height fields now hold the base tile size and not the current
	  tile size.


18/092006:
	- Added a "Last-Modified" and "ETag" header to the CVT HTTP response
	  to prevent double requests from being made by web browsers.
	- Fixed bug in CVT where the tile size was being incorrectly set from
	  the IIPImage object and not the tile itself, which was a problem
	  when getting tiles from the cache.


15/09/2006:
	- Changed the Cache keys to be simple strings rather than custom
	  objects. This has solved one of the crashing problems when tiles
	  are deleted from the cache.


29/08/2006:
	- Added Writer class to shield the command implentations from any